webgl: LowLatency and toDataURL work nicely together

There is a lot of flipping going on when using the
GL_MESA_framebuffer_flip_y extension.  toDataURL and
LowLatency have competing requirments when calling
CopyToPlatformTexture.

https://codepen.io/miguelao/full/WKZaqd
https://www.khronos.org/registry/webgl/sdk/tests/conformance/canvas/to-data-url-test.html

BUG=883362

Change-Id: Iafe11c23591a79f696b652a57f2d083258d3aa9c
Reviewed-on: https://chromium-review.googlesource.com/1237248
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Commit-Queue: Fritz Koenig <frkoenig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593223}
Former-commit-id: 82b858256ed2d4f56d5c5081614474de726fd89f